Update item deletion logic and view model logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="add">Add</string>
     <string name="closet">Closet</string>
     <string name="carousel">Carousel</string>
+    <string name="active_deletion_state">Active</string>
+    <string name="inactive_deletion_state">Inactive</string>
+    <string name="confirmed_deletion_state">Confirmed</string>
 </resources>
